# novel

./: architecture-novel-runtime-v1.md
changes/activate-route-a-provider-implementation/: design.md  findings.md  progress.md  proposal.md  tasks.md
changes/make-chapter-continuation-executable/: decisions.md  design.md  findings.md  issues.md  learnings.md  problems.md  progress.md  proposal.md  tasks.md
changes/make-chapter-guide-assisted-executable/: design.md  progress.md  proposal.md  tasks.md
changes/make-chapter-revise-executable/: design.md  findings.md  progress.md  proposal.md  tasks.md
changes/reframe-roadmap-api-and-helper-cli/: design.md  route-matrix.md
changes/roadmap-next-step/: decisions.md  findings.md  issues.md  learnings.md  progress.md  tasks.md
novel-runtime/: pyproject.toml
novel-runtime/novel_runtime/context/: assembly.py  visibility.py
novel-runtime/novel_runtime/llm/: __init__.py  provider.py  resilience.py  temperature.py
novel-runtime/novel_runtime/pipeline/: __init__.py  approver.py  assistant_result_validator.py  auditor.py  drafter.py  guider.py  postcheck.py  reviser.py  router.py  settler.py
novel-runtime/novel_runtime/rules/: engine.py
novel-runtime/novel_runtime/state/: canonical.py  schema.py  snapshot.py  world_model.py
tests/: conftest.py  test_approver.py  test_assistant_result_validator.py  test_auditor.py  test_cli_chapter.py  test_cli_e2e.py  test_cli_state_snapshot.py  test_drafter.py  test_postcheck.py  test_reviser.py  test_route_b_guidance.py  test_router.py  test_settler.py
(+71 files in other folders)
